# mscript

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  callgrind.out.14933  run_tests.sh
doc/: navrh_jazyka_pro_skriptovani_strategii_cz.md  popis_jazyka_cz.md
src/: imtjson  shared
src/mscript/: CMakeLists.txt  arrbld.cpp  arrbld.h  block.cpp  block.h  codelocation.h  compiler.cpp  compiler.h  disasm.h  dynmap.h  exceptions.cpp  exceptions.h  function.h  generator.cpp  generator.h  instructions.h  mathex.cpp  mathex.h  node.cpp  node.h  param_pack.h  parser.cpp  parser.h  procarr.cpp  procarr.h  range.cpp  range.h  scope.cpp  scope.h  utils.cpp  utils.h  value.cpp  value.h  vm.cpp  vm.h  vm_rt.cpp  (+1 more)
testdata/: 000_numbers.mscript  001_basic.mscript  002_block.mscript  003_inline_block.mscript  004_parampack.mscript  004_valuelist.mscript  005_for_num.mscript  005_range_for.mscript  006_for_array.mscript  007_mk_object.mscript  008_mathfn.mscript  009_ifelse.mscript  010_switch.mscript  011_range_mk.mscript  012_while.mscript  013_printlist.mscript  014_function.mscript  015_methods.mscript  016_fnexpand_args.mscript  017_methods_call.mscript  018_chain_call.mscript  019_closure.mscript  020_custom_binary_operator.mscript  021_cast2array.mscript  022_map_array.mscript  023_procedural_array.mscript  024_vtarray_concat.mscript  025_operator_in.mscript  026_matrix.mscript  027_find.mscript  028_sort.mscript  029_array_map.mscript  030_integral.mscript  031_index_filter.mscript  032_typeof.mscript  033_isdef.mscript  034_break.mscript  elements.txt
(+2 files in other folders)
